[package]
name = "arp-gmail"
version = "0.1.0"
edition = "2021"
description = "Shared library for sending mail via Gmail"
keywords = ["axum", "plugin"]
categories = ["axum"]
repository = "https://github.com/mrhdias/arp-gmail"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = "1.4.1"
lettre = { version = "0.11.9", features = ["native-tls", "tokio1-native-tls"] }
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
